# nand2tetris

./: .gitignore
projects/01/: DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or8Way.hdl
projects/02/: ALU.hdl  FullAdder.hdl
projects/03/a/: PC.hdl  RAM64.hdl  RAM8.hdl
projects/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/04/fill/: Fill.asm
projects/04/mult/: Mult.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/assembler/: Assembler.hs  Instruction.hs  Main.hs  Parser.hs  SymbolTable.hs
projects/compiler/: compiler.cabal
projects/compiler/app/: Assembler.hs  Translator.hs
projects/compiler/src/Assembler/: Assembler.hs  Instruction.hs  Parser.hs  SymbolTable.hs
projects/compiler/src/Translator/: Commands.hs  Parser.hs  Translator.hs
