name:                compiler
version:             0.1.0.0
synopsis:            Initial project template from stack
homepage:            https://github.com/rifung/nand2tetris
license:             GPL-3
license-file:        LICENSE
author:              Richard Fung
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Assembler.Assembler
                     , Assembler.Instruction
                     , Assembler.Parser
                     , Assembler.SymbolTable
                     , Translator.Commands
                     , Translator.Parser
                     , Translator.Translator
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath
  default-language:    Haskell2010

executable assembler-exe
  hs-source-dirs:      app
  main-is:             Assembler.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , compiler
  default-language:    Haskell2010

executable translator-exe
  hs-source-dirs:      app
  main-is:             Translator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , compiler
  default-language:    Haskell2010


test-suite compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , compiler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/compiler
